<resources>
    <string name="app_name">Compose Basics</string>

    <string name="course_name">Android Basics with Compose</string>
    <string name="unit_id">Unit %d</string>
    <string name="pathway_id">Pathway %d</string>
    <string name="pathways">Pathways</string>
    <string name="greeting_card">Greeting Card</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="happy_birthday_text">Happy Birthday, %s!</string>
    <string name="signature_text">- from %s</string>
    <string name="article">Article</string>
    <string name="article_title">Jetpack Compose tutorial</string>
    <string name="article_p1">Jetpack Compose is a modern toolkit for building native Android UI. Compose simplifies and accelerates UI development on Android with less code, powerful tools, and intuitive Kotlin APIs.</string>
    <string name="article_p2">In this tutorial, you build a simple UI component with declarative functions. You call Compose functions to say what elements you want and the Compose compiler does the rest. Compose is built around Composable functions. These functions let you define your app\'s UI programmatically because they let you describe how it should look and provide data dependencies, rather than focus on the process of the UI\'s construction, such as initializing an element and then attaching it to a parent. To create a Composable function, you add the @Composable annotation to the function name.</string>
    <string name="tasks_completed">Tasks Completed</string>
    <string name="quadrants">Quadrants</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="roll">Roll</string>
    <string name="lemonade">Lemonade</string>
    <string name="lemon1">Tap the lemon tree to select a lemon</string>
    <string name="lemon2">Keep tapping the lemon to squeeze it</string>
    <string name="lemon3">Tap the lemonade to drink it</string>
    <string name="lemon4">Tap the empty glass to start again</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="tip_time">Tip Time</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="how_was_the_service">Tip (%)</string>
    <string name="round_up_tip">Round up tip?</string>
</resources>
